Razor page working on

--- a/LYSL.Web/Views/Pet/GetPetById.cshtml
+++ b/LYSL.Web/Views/Pet/GetPetById.cshtml
@@ -1,4 +1,4 @@
-﻿@model LYSL.Web.ViewModels.Pets.PetViewModel
+﻿@model LYSL.Web.ViewModels.Pet.PetViewModel
 @{
     ViewData["Title"] = "GetPetById";
 }
