--- a/LYSL.Web/Views/Pet/Index.cshtml
+++ b/LYSL.Web/Views/Pet/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model LYSL.Web.ViewModels.Pets.PetListViewModel
+﻿@model LYSL.Web.ViewModels.Pet.PetListViewModel
 
 @{
     ViewData["Title"] = "GetAllPet";
 }
 
-<h1>Pets in this Location</h1>
+<h1>Pet in this Location</h1>
 
 <span>강아지 총 마릿수 : @Model.PetViewList.Count()</span>
 
