--- a/LYSL.Web/Views/Pet/CreatePetPage.cshtml
+++ b/LYSL.Web/Views/Pet/CreatePetPage.cshtml
@@ -1,31 +1,31 @@
-﻿@model LYSL.Web.ViewModels.Pet.PetCreateDto
+﻿@model LYSL.Web.ViewModels.Pet.PetCreateDto;
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "CreatePetPage";
 }
 
-<h1>Create</h1>
+<h1>CreatePage</h1>
 
 <h4>Pet</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="pet/CreatePet" method="POST">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="CreatePet" method="post">
+            @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
             <div class="form-group">
                 <label asp-for="Breed" class="control-label"></label>
                 <input asp-for="Breed" class="form-control" />
-                <span asp-validation-for="Breed" class="text-danger"></span>
+                @*<span asp-validation-for="Breed" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Weight" class="control-label"></label>
                 <input asp-for="Weight" class="form-control" />
-                <span asp-validation-for="Weight" class="text-danger"></span>
+                @*<span asp-validation-for="Weight" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
                 <input asp-for="Age" class="form-control" />
-                <span asp-validation-for="Age" class="text-danger"></span>
+                @*<span asp-validation-for="Age" class="text-danger"></span>*@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -35,15 +35,12 @@
             <div class="form-group">
                 <label asp-for="SerialNumber" class="control-label"></label>
                 <input asp-for="SerialNumber" class="form-control" />
-                <span asp-validation-for="SerialNumber" class="text-danger"></span>
+                @*<span asp-validation-for="SerialNumber" class="text-danger"></span>*@
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            <button type="submit" class="btn-info">Submit</button>
         </form>
     </div>
 </div>
-
 
 <div>
     <a asp-action="Index">Back to List</a>
