--- a/LYSL.Web/Views/Pet/Index.cshtml
+++ b/LYSL.Web/Views/Pet/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LYSL.Web.ViewModels.Pet.PetListViewModel
+﻿@model LYSL.Web.ViewModels.Pet.PetListDto
 
 @{
     ViewData["Title"] = "GetAllPet";
