--- a/LYSL.Web/Views/Pet/GetPetById.cshtml
+++ b/LYSL.Web/Views/Pet/GetPetById.cshtml
@@ -23,7 +23,7 @@
     </ul>
 </ul>
 
-<form asp-controller="pet" asp-action="DeletePetById" asp-route-id="@Model.Id">
+<form asp-controller="pet" asp-action="DeletePet" asp-route-id="@Model.Id">
     <input type="submit" value="Delete" class="btn btn-danger" />
     @*<a asp-controller="Pet" asp-action="GetAllPet" class="btn btn-info">Go Index</a>*@
     <a asp-action="Index" class="btn btn-info">Back to List</a>
@@ -50,6 +50,7 @@
 <h3>My Google Maps Demo</h3>
 <!--The div element for the map -->
 <div id="map"></div>
+
 <script>
     // Initialize and add the map
     function initMap() {
@@ -73,9 +74,9 @@
         });
     }
 
-
-
+    // Axios로 get
 </script>
+
 <style>
 
     #map {
